--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
         An error has occurred. Please try again by clicking REFRESH
     </string>
 
-    <string name="content_authority">com.example.android.sunshine</string>
+    <string name="content_authority">com.example.root.weatherapp</string>
 
 
     <!-- - - - - - - - - - - - - - - -
